--- a/src/App.css
+++ b/src/App.css
@@ -3,18 +3,15 @@ html, body, h1, p {
   padding: 0;
 }
 
-main {
-  background-color: #F5EFE6;
-}
-
 .intro-page, .quiz-page {
-  background-color: #F5EFE6;
   position: absolute;
   height: 100%;
   width:100%;
 }
 
 .intro-page {
+  background-image: url(./intro-page.png);
+  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -58,6 +55,8 @@ main {
 }
 
 .quiz-page {
+  background-image: url(./questions.png);
+  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
